--- a/src/Cart.css
+++ b/src/Cart.css
@@ -1,10 +1,12 @@
 .box {
   border: 2px solid black;
-  width: 100px;
+  width: 300px;
   height: 100px;
   padding: 10px 20px;
   color: black;
   margin: 20px;
+  display: flex;
+  gap: 5px;
 }
 
 .cart{
@@ -17,4 +19,19 @@
     color: white;
     padding: 10px;
     border-radius: 5px;
+}
+
+.divbox{
+    background-color: black;
+    padding: 10px 20px;
+    width: 30px;
+    margin: 20px;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.divmainbox{
+    display: flex;
 }
